# openarmx_ws

./: .gitignore  README.md  demo.yaml  start_collect_terminator.sh  terminator_openarmx_collect_config.template  wait_and_launch_cameras.sh  wait_collect_ready.sh
openarmx_isaac_urdf/: cube.yaml  openarmx_isaac.usd
openarmx_isaac_urdf/configuration/: openarmx_isaac_physics.usd  openarmx_isaac_robot.usd
openarmx_isaac_urdf/meshes/body/v10/visual/: body_link0.dae
openarmx_isaac_urdf/urdf/arm/: openarmx_macro.xacro
openarmx_isaac_urdf/urdf/body/: openarmx_body_macro.xacro
openarmx_isaac_urdf/urdf/ee/: openarmx_hand.xacro  openarmx_hand_macro.xacro
openarmx_isaac_urdf/urdf/robot/: openarmx_robot.urdf  v10.urdf.xacro
openarmx_isaac_urdf/urdf/robot/openarmx_robot/configuration/: openarmx_robot_physics.usd
openarmx_robot/: openarmx_robot.usd
openarmx_robot/configuration/: openarmx_robot_base.usd  openarmx_robot_physics.usd  openarmx_robot_sensor.usd
src/isaacsim/: CMakeLists.txt  package.xml
src/isaacsim/launch/: openarmx_command_to_joint_state.launch.py  run_isaacsim.launch.py
src/isaacsim/scripts/: openarmx_command_to_joint_state.py  run_isaacsim.py
src/openarmx_description/config/body/v10/: kinematics.yaml
src/openarmx_description/meshes/body/v10/visual/: body_link0.dae
src/openarmx_description/rviz/: bimanual.rviz
src/openarmx_description/urdf/robot/: openarmx_robot.urdf
src/openarmx_motor_manager/config/: config.yaml
src/openarmx_ros2/: openarmx_bringup_and_hardware_guide_CN.md
src/openarmx_ros2/openarmx_bringup/launch/: openarmx.bimanual.launch.py
src/openarmx_ros2/openarmx_hardware/include/openarmx_hardware/: v10_simple_hardware.hpp
src/openarmx_ros2/openarmx_hardware/src/: v10_simple_hardware.cpp
src/openarmx_teleop_bimanual/: CMakeLists.txt  package.xml
src/openarmx_teleop_bimanual/src/: teleop_bimanual_with_gravitycomp_single.cpp
src/openarmx_teleop_vr_pico/openarmx_teleop_bridge_vr_pico/: CMakeLists.txt  README.md  README_CN.md  package.xml
src/openarmx_teleop_vr_pico/openarmx_teleop_bridge_vr_pico/src/: openarmx_teleop_bridge_vr_pico_node.cpp
src/openarmx_teleop_vr_pico/openarmx_teleop_vr_pico/: README.md  README_CN.md  package.xml  setup.cfg  setup.py
src/openarmx_teleop_vr_pico/openarmx_teleop_vr_pico/launch/: teleop_vr_pico.launch.py
src/openarmx_teleop_vr_pico/openarmx_teleop_vr_pico/openarmx_teleop_vr_pico/: __init__.py  openarmx_teleop_vr_pico_node.py
src/openarmx_teleop_vr_pico/openarmx_teleop_vr_pico/test/: test_copyright.py  test_flake8.py  test_pep257.py
src/openarmx_tools/: README.md  README_CN.md
src/openarmx_tools/openarmx_gripper_panel/: package.xml
src/openarmx_tools/openarmx_joint_slider_panel/: README.md  README_CN.md  package.xml
src/openarmx_tools/openarmx_joint_slider_panel/include/openarmx_joint_slider_panel/: joint_slider_panel.hpp
src/openarmx_tools/openarmx_joint_slider_panel/plugins/: plugin_description.xml
src/openarmx_tools/openarmx_joint_slider_panel/src/: joint_slider_panel.cpp
src/openarmx_tools/openarmx_kp_kd_panel/: package.xml
src/openarmx_tools/openarmx_kp_kd_panel/include/openarmx_kp_kd_panel/: kp_kd_panel.hpp
src/openarmx_tools/openarmx_kp_kd_panel/src/: kp_kd_panel.cpp
src/openarmx_tools/openarmx_teach/: README_CN.md  package.xml
src/openarmx_tools/openarmx_teach/openarmx_teach/: play_joint_trajectory.py
src/openarmx_vla/: openarmx_lerobot_code_structure_intro.md
src/openarmx_vla/lerobot_robot_openarmx_follower_ros2/: README.md  README_CN.md  pyproject.toml  setup.py
src/openarmx_vla/lerobot_robot_openarmx_follower_ros2/lerobot_robot_openarmx_follower_ros2/: __init__.py  config_openarmx_ros2.py  openarmx_ros2.py  ros2_camera.py  ros2_interface_openarmx.py
src/openarmx_vla/lerobot_robot_openarmx_follower_ros2/lerobot_robot_openarmx_follower_ros2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/openarmx_vla/lerobot_teleoperator_openarmx_leader_ros2/: LICENSE  README.md  README_CN.md  pyproject.toml
src/openarmx_vla/lerobot_teleoperator_openarmx_leader_ros2/lerobot_teleoperator_openarmx_leader_ros2/: __init__.py  config_openarmx_ros2.py  openarmx_ros2.py  ros2_interface_openarmx.py
src/openarmx_vla/lerobot_teleoperator_openarmx_leader_ros2/lerobot_teleoperator_openarmx_leader_ros2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/openarmx_vla/openarmx_lerobot/: README.md  README_CN.md  camera_viewer.py  package.xml  setup.cfg  setup.py
src/openarmx_vla/openarmx_lerobot/launch/: camera_publisher.launch.py  openarmx_lerobot.launch.py
src/openarmx_vla/openarmx_lerobot/openarmx_lerobot/: __init__.py
src/openarmx_vla/openarmx_lerobot/resource/: openarmx_lerobot
