<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
   Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International

   Copyright (c) 2026 Chengdu Changshu Robot Co., Ltd.
   https://www.openarmx.com

   This work is licensed under the Creative Commons Attribution-NonCommercial-ShareAlike
   4.0 International License (CC BY-NC-SA 4.0).

   To view a copy of this license, visit:
   http://creativecommons.org/licenses/by-nc-sa/4.0/

   THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND.
-->
<package format="3">
  <name>openarmx_gripper_panel</name>
  <version>1.0.0</version>
  <description>OpenArm夹爪控制面板 - RViz插件,用于在MoveIt中控制单/双夹爪</description>

  <maintainer email="openarmrobot@gmail.com">Chengdu Changshu Robot Co., Ltd</maintainer>
  <license>CC-BY-NC-SA-4.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- C++ dependencies for RViz plugin -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>control_msgs</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>pluginlib</depend>
  <depend>qtbase5-dev</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-widgets</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/plugins/plugin_description.xml"/>
  </export>
</package>
