# Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International
#
# Copyright (c) 2026 Chengdu Changshu Robot Co., Ltd.
# https://www.openarmx.com
#
# This work is licensed under the Creative Commons Attribution-NonCommercial-ShareAlike
# 4.0 International License (CC BY-NC-SA 4.0).
#
# To view a copy of this license, visit:
# http://creativecommons.org/licenses/by-nc-sa/4.0/
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND.

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_robot_openarmx_follower_ros2"
version = "0.0.1"
description = "A package for controlling OpenARM-X robot with VR controller in ROS2 environment."
authors = [
    {name = "OpenARM-X Team"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "lerobot",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lerobot_robot_openarmx_follower_ros2*"]

[project.entry-points."lerobot.robots"]
openarmx_follower_ros2 = "lerobot_robot_openarmx_follower_ros2.config_openarmx_ros2:OpenArmXRos2Config"

[tool.setuptools_scm]